Make Material and MaterialPart naturally immutable